<resources>
  <string name="app_name">Yuanll App</string>
  <string name="lorem_10">Lorem Ipsum</string>
  <string name="lorem_30">Lorem ipsum dolor sit gravida.</string>
  <string name="lorem_50">Lorem ipsum dolor sit amet, consectetur porttitor.</string>
  <string name="lorem_100">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse cursus mollis suscipit posuere.</string>
  <string name="lorem_200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare massa vestibulum sem vehicula, sed egestas lorem dignissim. Mauris blandit massa sed elit vehicula consequat. Morbi in dolor eget.</string>
  <string name="lorem_300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dignissim tristique urna, vel cursus nisi ultrices eget. Fusce placerat metus a purus rhoncus semper. Nam posuere quam ut dolor pulvinar, quis lobortis dolor sagittis. Suspendisse potenti. Vestibulum sit amet augue et turpis aliquet quam.</string>
  <string name="lorem_500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce rhoncus consectetur leo nec molestie. Mauris metus ante, tempus sit amet nisi vitae, imperdiet vestibulum nulla. Nunc sagittis ut lectus in elementum. Vestibulum vestibulum tempor metus lacinia placerat. Quisque id rhoncus metus. Donec eget nunc libero. Duis sit amet maximus purus. Etiam tincidunt consectetur lorem, id volutpat elit consectetur a. Curabitur vitae fringilla massa. Nam posuere, orci nec semper vulputate, quam ex dolor.</string>
  <string name="lorem_1000">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce luctus mattis nulla. Vivamus vulputate ut eros eu luctus. Nullam eleifend, nisi sed sodales mollis, felis enim fringilla purus, id tincidunt orci orci id lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras auctor maximus mauris euismod dictum. Nam justo urna, malesuada lobortis semper eu, feugiat in nisi. Ut magna nisi, consectetur ac urna vitae, dictum maximus diam. Suspendisse accumsan nulla quis lobortis ullamcorper.

Fusce vestibulum nisl in sem dignissim placerat. Cras diam sapien, cursus at ante nec, pharetra viverra nisl. Nunc ac nisi ac augue mollis luctus sit amet ut sapien. Aenean consequat, dolor vel congue consectetur, arcu arcu efficitur ipsum, eu interdum mauris turpis et massa. Quisque a purus elit. Pellentesque commodo nisl erat, at sagittis massa aliquet id. Cras sagittis sit amet purus quis scelerisque. Nulla et tellus odio. Duis ex quam, mattis nec rhoncus at, auctor nec risus tellus.</string>
  <string name="lorem_3000">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam dictum tortor tellus, sit amet ultricies nisi ullamcorper at. Duis vitae finibus metus. Praesent sed neque lacus. Integer tincidunt leo vitae pulvinar tempus. Pellentesque sed lorem non neque feugiat congue. Phasellus mauris urna, lacinia eget mi posuere, faucibus laoreet mauris. Suspendisse tempus, justo sed vestibulum blandit, odio sapien imperdiet diam, eget ultricies enim dui efficitur nulla.

Integer at lectus quis eros vulputate vulputate. Maecenas semper mattis placerat. Morbi quis lectus quis ante condimentum convallis viverra tincidunt mauris. Sed pretium, quam a molestie tincidunt, libero felis pellentesque nunc, a auctor enim mauris id neque. Nunc non lacus ac turpis auctor accumsan. In vitae tempor felis. Quisque sit amet commodo dui.

Donec commodo luctus mauris, et iaculis quam elementum et. Quisque pharetra arcu turpis, at interdum est vehicula eget. Pellentesque nec sagittis arcu. Proin nec rutrum nunc. Nam posuere nulla ac porta egestas. Vivamus quis ornare arcu. Phasellus laoreet, dolor at pellentesque luctus, orci orci egestas ante, ac sodales lacus mi in lectus. Mauris mattis, sapien quis ultricies tincidunt, dolor erat convallis augue, ac euismod nulla ex et ipsum. Fusce lacus risus, efficitur sit amet pretium at, mattis ut nisi. Nulla pellentesque molestie neque non sollicitudin. Cras accumsan risus odio, et pharetra sapien ornare nec. Mauris lobortis posuere metus, vitae sodales est elementum eu. Sed sagittis vitae lorem eget euismod. Donec sit amet sagittis lorem. Vivamus vel pulvinar arcu.

Sed vitae porttitor metus, at mollis eros. Curabitur quis magna a tellus volutpat volutpat. Integer pharetra accumsan risus, sed elementum leo pulvinar in. Nam a eleifend velit, in feugiat quam. Aliquam elit dolor, aliquam vitae vehicula sit amet, dapibus sed mauris. Cras pulvinar sagittis nulla id fermentum. Nam cursus blandit erat bibendum pellentesque. Suspendisse molestie turpis risus, at dapibus est sodales tincidunt. Etiam et ligula libero. Etiam vel lectus lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut in eleifend tortor, ac placerat lectus. Pellentesque tempor vulputate commodo. Cras vitae blandit dui, at ornare mi. Nunc egestas est dui, quis pellentesque risus fringilla id. Pellentesque rutrum ligula eu nisl tincidunt, nec mattis risus mattis.

Sed id pellentesque elit. Etiam et consequat augue, eget volutpat velit. Sed ut nisl tortor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam condimentum mauris id massa commodo porttitor. Sed iaculis dignissim posuere. Morbi sodales pulvinar magna ac fermentum. Proin malesuada dolor nec massa facilisis vestibulum. Phasellus sollicitudin quam non blandit aliquam.

Aliquam ultricies sem sed nisl ultricies tincidunt. Vivamus bibendum tortor a mauris sagittis iaculis. In posuere euismod consectetur. Donec eleifend ante quis nisi ullamcorper, quis condimentum mauris.</string>
  <string name="lorem_5000">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras egestas sodales finibus. Vivamus in ligula facilisis ipsum mollis mollis a sit amet erat. Vestibulum hendrerit sem non tellus rhoncus eleifend. Praesent tortor enim, tempor in est sit amet, posuere hendrerit augue. Etiam commodo sem odio. Suspendisse vel augue eros. In sed tellus eu arcu dapibus consectetur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse scelerisque nisi ac dui congue, id elementum nunc pretium.

Nulla pretium quis orci ac semper. Phasellus non libero gravida, aliquam tellus id, pretium ante. Fusce vehicula sodales urna, sit amet malesuada mi gravida nec. Sed tempus ligula sit amet justo posuere scelerisque. Duis hendrerit quam sit amet quam fringilla molestie. Phasellus turpis velit, ornare ultricies consectetur id, vestibulum non augue. Aliquam ut nisl vel libero consectetur convallis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed vel fermentum eros, vel consequat tellus. Quisque ullamcorper purus eget rhoncus tincidunt. Donec ultricies malesuada elit, sit amet venenatis arcu bibendum ut. Etiam a erat aliquam, luctus elit a, auctor lectus. Mauris malesuada ante quis imperdiet porttitor. Nam a ante sodales, semper eros vel, consectetur massa.

Aenean et massa nec ex ullamcorper eleifend. Nullam eu eleifend massa. Donec a eros sed dolor mattis venenatis vitae ut orci. Etiam at purus a ligula volutpat rhoncus vitae mollis dui. Duis fringilla finibus lorem, eu efficitur tortor euismod id. Duis quis ipsum et nisi ullamcorper cursus vel laoreet felis. Etiam iaculis pellentesque mauris, et aliquam massa iaculis in. Sed gravida ac enim in viverra. Donec feugiat erat at nibh pharetra elementum. Pellentesque viverra, diam a pharetra efficitur, risus tortor mattis ex, id tincidunt ex justo id leo. Donec eget elementum quam. Etiam laoreet tellus pulvinar convallis hendrerit. Morbi maximus orci eu faucibus maximus. Fusce tincidunt pellentesque commodo.

Vestibulum convallis nulla id cursus pharetra. Donec interdum tellus vitae magna fermentum, ac porta urna efficitur. Aliquam ut lacus nec sem venenatis sodales. Vivamus a ex nisl. Vestibulum tristique eu velit vel elementum. Donec non auctor est, eget finibus orci. Morbi id eros et mi lacinia vulputate. Suspendisse dignissim, tellus in vestibulum volutpat, nisl leo mattis elit, a congue elit augue sed augue. Etiam commodo ut nisl sit amet elementum.

Nulla facilisi. Morbi quam massa, tincidunt placerat hendrerit eu, consequat in tortor. Aenean sollicitudin pretium lacus, eget egestas eros porttitor vitae. Nunc vitae lacus nisi. In hac habitasse platea dictumst. Pellentesque eu erat nec nunc faucibus sollicitudin id at sapien. In molestie arcu vehicula urna varius, sit amet dignissim risus lacinia. Aliquam elementum lorem nec commodo commodo. Vivamus vulputate justo in mauris cursus, in aliquam ipsum pulvinar. In et massa feugiat, ullamcorper turpis vitae, vehicula urna.

Donec aliquam lectus sed consectetur molestie. Cras dignissim pretium diam, vel eleifend quam elementum faucibus. Praesent non viverra neque. Pellentesque sit amet augue vitae ex ullamcorper maximus. Quisque vestibulum libero quis neque blandit molestie. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut lectus facilisis, varius orci nec, aliquam metus. Cras felis ipsum, tincidunt sed aliquam et, vehicula in mi. Aenean placerat quis orci et lacinia. Pellentesque a tincidunt erat, sed bibendum turpis. Phasellus venenatis sagittis orci, sed ornare sapien ornare quis. Nulla pretium lorem nec ex bibendum blandit sit amet in ipsum. Donec at ultricies eros, sed dictum lectus. In hac habitasse platea dictumst. Curabitur eu ultricies libero, ut tincidunt velit.

Suspendisse auctor vehicula lectus, vitae gravida neque fermentum in. Cras elementum mi vel magna sodales rhoncus ut at leo. Sed orci elit, pharetra a imperdiet at, dapibus eget tellus. Ut aliquet laoreet mi, accumsan tempus lorem ullamcorper sed. Vivamus tincidunt, urna et semper efficitur, nisi dolor euismod quam, sit amet congue libero lectus ut nisl. Nullam fermentum orci eu egestas faucibus. Aliquam at est ultrices, faucibus purus vel, molestie urna. In suscipit commodo lacus quis cursus. Morbi mattis erat ac metus finibus, eget facilisis arcu porttitor. Vivamus turpis dui, facilisis quis ex quis, vulputate rhoncus tortor. Praesent vitae neque fringilla, posuere libero at, pellentesque est. Suspendisse iaculis neque in nibh bibendum cursus. Sed dui enim, volutpat ut urna id, dapibus scelerisque risus. In hac habitasse platea dictumst.

Duis eleifend purus ex, vel dictum mi feugiat at. Aenean ultricies luctus erat at ultrices. Aenean at pulvinar nisi. Nunc fermentum magna eu quam malesuada posuere. Fusce vulputate dolor sit amet dapibus pretium. Aliquam leo magna, efficitur quis massa in, dignissim viverra massa. Curabitur sodales tristique dignissim. Nullam euismod imperdiet elit dictum cras amet.</string>
  <string name="username">用户名</string>
  <string name="password">密码</string>
  <string name="login">登陆</string>
  <string name="rememberMe">记住我</string>
  <string name="autoLogin">自动登陆</string>
  <string name="error">错误</string>
  <string name="success">成功</string>
  <string name="info">信息</string>
  <string name="warning">警告</string>
  <string name="normal">正常</string>
  <string name="custom">自定义</string>
  <string name="test">测试</string>
  <string name="row">行</string>
  <string name="column">列</string>
  <string name="update">更新</string>
</resources>