<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <!-- 分隔线 -->
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/username_password_vertical_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.0" />

  <!-- 用户名输入框 -->
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/login_edit_username"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:layout_marginHorizontal="50dp"
    android:layout_marginTop="120dp"
    app:hintEnabled="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/login_edit_username_value"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/username"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <!--  密码输入框-->
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/login_edit_password"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:layout_marginHorizontal="50dp"
    android:layout_marginTop="20dp"
    android:inputType="textPassword"
    app:counterEnabled="true"
    app:counterMaxLength="30"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/login_edit_username">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/login_edit_password_value"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/password"
      android:inputType="textPassword" />

  </com.google.android.material.textfield.TextInputLayout>

  <!--  记住我-->
  <CheckBox
    android:id="@+id/login_remember_me"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/rememberMe"
    app:layout_constraintStart_toStartOf="@id/login_edit_password"
    app:layout_constraintTop_toBottomOf="@id/login_edit_password" />

  <CheckBox
    android:id="@+id/login_auto_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/autoLogin"
    app:layout_constraintStart_toStartOf="@id/login_remember_me"
    app:layout_constraintTop_toBottomOf="@id/login_remember_me" />

  <!--  登陆-->
  <com.google.android.material.button.MaterialButton
    android:id="@+id/login_login_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingHorizontal="70dp"
    android:paddingVertical="10dp"
    android:text="@string/login"
    android:textSize="20sp"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/login_auto_login" />

</androidx.constraintlayout.widget.ConstraintLayout>