<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/wellplate_row"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/row"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/wellplate_row_value"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:inputType="number"
    app:layout_constraintLeft_toRightOf="@+id/wellplate_row"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/wellplate_column"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/column"
    app:layout_constraintLeft_toRightOf="@+id/wellplate_row_value"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/wellplate_column_value"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:inputType="number"
    app:layout_constraintLeft_toRightOf="@+id/wellplate_column"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/wellplate_update_row_column"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/update"
    app:layout_constraintLeft_toRightOf="@+id/wellplate_column_value"
    app:layout_constraintTop_toTopOf="parent" />

  <com.view.components.CircleDrawingView
    android:id="@+id/gridView2"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_marginTop="60dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.view.components.GridWellPlateComponent1
    android:id="@+id/gridView1"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:layout_marginTop="60dp"
    android:clipToPadding="true"
    android:visibility="gone"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <GridView
    android:id="@+id/gridView"
    android:layout_width="400dp"
    android:layout_height="400dp"
    android:layout_marginTop="60dp"
    android:gravity="center"
    android:horizontalSpacing="5dp"
    android:numColumns="6"
    android:stretchMode="columnWidth"
    android:visibility="gone"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>